# spotify_music_analysis

./: README.md  pyproject.toml
.github/workflows/: docs.yml
app/: routes.py
app/static/: script.js  style.css
app/templates/: base.html  dashboard.html  data.html  index.html
app/utils/: data_loader.py
app/visualizations/: plot_utils.py
docs/: conf.py  index.rst
tests/: test_data_loader.py  test_plot_utils.py
